# gnn-intrusion-detection

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
docs/: dataset_build_notes.md  integration_report.md  module_a_documentation.md  module_a_handoff.md  node_dataset_notes.md  repo_readiness_checklist.md
docs/figures/: README.md
project_files/gcn_ids/: learning.py
scripts/: build_merged_dataset.py  build_node_window_dataset.py  run_module_a_mac.sh  run_module_a_windows.ps1  visualize_flow_windows.py
tests/: test_data_graph.py
