[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gnn-intrusion-detection"
version = "0.1.0"
description = "End-to-end graph neural network workflow for intrusion detection."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "NSF-DARSE Team" }
]
dependencies = [
  "pandas>=2.0.0",
  "numpy>=1.24.0",
  "scikit-learn>=1.3.0",
  "joblib>=1.3.0",
  "networkx>=3.2.0",
  "matplotlib>=3.9.0",
  "torch>=2.8.0",
  "pypdf>=6.0.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0.0"
]

[project.scripts]
gnn-ids-run = "main:main"

[tool.setuptools]
py-modules = ["main"]

[tool.setuptools.packages.find]
include = ["gcn_ids*"]
